--- a/index.html
+++ b/index.html
@@ -1323,94 +1323,94 @@
 	</div>
 	
 	<div class="container padding-leader padding-trailer">
-		<h1 class="text-size--38 tabletl-text-size--34 text-light">Deviders</h1>
+		<h1 class="text-size--38 tabletl-text-size--34 text-light">Dividers</h1>
 	</div>
 	
 	<div class="container">
 		<div class="grid-row--gutter-small">
 			<h2 class="text-size-18 trailer leader">1 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center devider-block">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">1 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">1 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke">
-				<div class="devider-block__holder col-xs-2"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke">
+				<div class="divider-block__holder col-xs-2"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">10 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center devider-block devider-block--small">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--small">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">10 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--small">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--small">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">10 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--small">
-				<div class="col-xs-2 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--small">
+				<div class="col-xs-2 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">20 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center devider-block devider-block--medium">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--medium">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">20 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--medium">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--medium">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">20 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--medium">
-				<div class="col-xs-2 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--medium">
+				<div class="col-xs-2 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">30 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center devider-block devider-block--large">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--large">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">30 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--large">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--large">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">30 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--large">
-				<div class="col-xs-2 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--large">
+				<div class="col-xs-2 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">50 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center devider-block devider-block--xlarge">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--xlarge">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">50 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--xlarge">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--xlarge">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">50 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--xlarge">
-				<div class="col-xs-2 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--xlarge">
+				<div class="col-xs-2 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">80 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center devider-block devider-block--huge">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--huge">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">80 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--huge">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--huge">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">80 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--huge">
-				<div class="col-xs-2 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--huge">
+				<div class="col-xs-2 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">100 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center devider-block devider-block--xhuge">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--xhuge">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">100 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--xhuge">
-				<div class="col-xs-12 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--xhuge">
+				<div class="col-xs-12 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">100 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center devider-block devider-block--stroke devider-block--xhuge">
-				<div class="col-xs-2 devider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--xhuge">
+				<div class="col-xs-2 divider-block__holder"></div>
 			</div>
 			<h2 class="text-size-18 trailer leader">&nbsp;</h2>
 		</div>
