--- a/index.html
+++ b/index.html
@@ -1329,88 +1329,130 @@
 	<div class="container">
 		<div class="grid-row--gutter-small">
 			<h2 class="text-size-18 trailer leader">1 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none divider-block">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">1 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">1 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke">
-				<div class="divider-block__holder col-xs-2"></div>
+			<div class="col-xs-12 grid-row--gutter-none divider-block divider-block--stroke">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-2 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">10 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--small">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none divider-block divider-block--small">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">10 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--small">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--small">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">10 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--small">
-				<div class="col-xs-2 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--small">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-2 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">20 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--medium">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none divider-block divider-block--medium">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">20 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--medium">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--medium">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">20 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--medium">
-				<div class="col-xs-2 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--medium">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-2 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">30 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--large">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none divider-block divider-block--large">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">30 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--large">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--large">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">30 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--large">
-				<div class="col-xs-2 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--large">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-2 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">50 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--xlarge">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none divider-block divider-block--xlarge">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">50 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--xlarge">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--xlarge">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">50 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--xlarge">
-				<div class="col-xs-2 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--xlarge">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-2 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">80 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--huge">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none divider-block divider-block--huge">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">80 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--huge">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--huge">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">80 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--huge">
-				<div class="col-xs-2 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--huge">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-2 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">100 px, only white background</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row-xs--center divider-block divider-block--xhuge">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none divider-block divider-block--xhuge">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">100 px, with 12 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--xhuge">
-				<div class="col-xs-12 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--xhuge">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-12 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">100 px, with 2 col stroke</h2>
-			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none grid-row-xs--center divider-block divider-block--stroke divider-block--xhuge">
-				<div class="col-xs-2 divider-block__holder"></div>
+			<div class="col-xs-12 grid-row--gutter-none grid-row--gutter-none divider-block divider-block--stroke divider-block--xhuge">
+				<div class="col-xs-12 divider-block__row grid-row--gutter-none grid-row-xs--center">
+					<div class="col-xs-2 divider-block__holder"></div>
+				</div>
 			</div>
 			<h2 class="text-size-18 trailer leader">&nbsp;</h2>
 		</div>
