--- a/index.html
+++ b/index.html
@@ -1140,17 +1140,19 @@
 			<!-- text left -->
 			<div class="col-xs-12 terminal-text-block terminal-text-block--image trailer">
 				<div class="terminal-text-block__holder grid-row--gutter-none">
-					<div class="col-lg-6 padding-whole--section padding-trailer--section tabletp-padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
-						<div class="icon-holder trailer mobile-hidden">
-							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+					<div class="col-lg-6 grid-row--gutter-none padding-whole--section padding-trailer--section tabletp-padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
+						<div class="col-lg-12">
+							<div class="icon-holder trailer mobile-hidden">
+								<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+							</div>
+							<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+							<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+							<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
+							<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
+								<a href="#">This is a link</a>
+							</p>
 						</div>
-						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
-						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
-						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
-						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
-							<a href="#">This is a link</a>
-						</p>
-						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-6 image-holder col-xs--first col-lg--ordered">
 						<img src="text-block-image.jpg" alt="image description" />
@@ -1161,17 +1163,19 @@
 			<!-- text right -->
 			<div class="col-xs-12 terminal-text-block terminal-text-block--image trailer">
 				<div class="terminal-text-block__holder grid-row--gutter-none">
-					<div class="col-lg-6 padding-whole--section padding-trailer--section tabletp-padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
-						<div class="icon-holder trailer mobile-hidden">
-							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+					<div class="col-lg-6 grid-row--gutter-none padding-whole--section padding-trailer--section tabletp-padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
+						<div class="col-lg-12">
+							<div class="icon-holder trailer mobile-hidden">
+								<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+							</div>
+							<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+							<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+							<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
+							<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
+								<a href="#">This is a link</a>
+							</p>
 						</div>
-						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
-						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
-						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
-						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
-							<a href="#">This is a link</a>
-						</p>
-						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-6 image-holder col-xs--first">
 						<img src="text-block-image.jpg" alt="image description" />
@@ -1194,7 +1198,7 @@
 								<a href="#">This is a link</a>
 							</p>
 						</div>
-						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-6 image-holder col-xs--first col-lg--ordered">
 						<img src="text-block-image.jpg" alt="image description" />
@@ -1217,7 +1221,7 @@
 								<a href="#">This is a link</a>
 							</p>
 						</div>
-						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-6 image-holder col-xs--first">
 						<img src="text-block-image.jpg" alt="image description" />
@@ -1248,7 +1252,7 @@
 						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
 							<a href="#">This is a link</a>
 						</p>
-						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-8 image-holder col-xs--first col-lg--ordered">
 						<img src="text-block-image.jpg" alt="image description" />
@@ -1269,7 +1273,7 @@
 						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
 							<a href="#">This is a link</a>
 						</p>
-						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-8 image-holder col-xs--first">
 						<img src="text-block-image.jpg" alt="image description" />
@@ -1290,7 +1294,7 @@
 						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
 							<a href="#">This is a link</a>
 						</p>
-						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-4 image-holder col-xs--first col-lg--ordered">
 						<img src="text-block-image.jpg" alt="image description" />
@@ -1311,7 +1315,7 @@
 						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
 							<a href="#">This is a link</a>
 						</p>
-						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-4 image-holder col-xs--first">
 						<img src="text-block-image.jpg" alt="image description" />
