--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
 					</div>
@@ -463,7 +463,7 @@
 				<a href="#" class="col-xs terminal-block terminal-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
 					<div class="col-xs">
 						<strong class="text-size--13">3-col banner block</strong>
-						<h2 class="text-size--28 tablel-text-size--44 tabletp-text-size--38 mobile-text-size--28 text-light trailer text-light">Main title. Episerver text you can write here</h2>
+						<h2 class="text-size--28 tabletl-text-size--44 tabletp-text-size--38 mobile-text-size--28 text-light trailer text-light">Main title. Episerver text you can write here</h2>
 						<span class="button button--action trailer--large">Button</span>
 					</div>
 					<p class="text-size--11 color-white banner-legal">Legal text</p>
@@ -499,7 +499,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
 					</div>
@@ -583,7 +583,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
 					</div>
@@ -674,7 +674,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
 					</div>
@@ -717,7 +717,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
 					</div>
@@ -1155,7 +1155,8 @@
 						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-6 image-holder col-xs--first col-lg--ordered">
-						<img src="text-block-image.jpg" alt="image description" />
+						<img class="desktop-image" src="text-block-image.jpg" alt="image description" />
+						<img class="mobile-image" src="text-block-image.jpg" alt="image description" />
 					</div>
 				</div>
 			</div>
@@ -1178,7 +1179,8 @@
 						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-6 image-holder col-xs--first">
-						<img src="text-block-image.jpg" alt="image description" />
+						<img class="desktop-image" src="text-block-image.jpg" alt="image description" />
+						<img class="mobile-image" src="text-block-image.jpg" alt="image description" />
 					</div>
 				</div>
 			</div>
@@ -1201,7 +1203,8 @@
 						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-6 image-holder col-xs--first col-lg--ordered">
-						<img src="text-block-image.jpg" alt="image description" />
+						<img class="desktop-image" src="text-block-image.jpg" alt="image description" />
+						<img class="mobile-image" src="text-block-image.jpg" alt="image description" />
 					</div>
 				</div>
 			</div>
@@ -1224,7 +1227,8 @@
 						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-6 image-holder col-xs--first">
-						<img src="text-block-image.jpg" alt="image description" />
+						<img class="desktop-image" src="text-block-image.jpg" alt="image description" />
+						<img class="mobile-image" src="text-block-image.jpg" alt="image description" />
 					</div>
 				</div>
 			</div>
@@ -1255,7 +1259,8 @@
 						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-8 image-holder col-xs--first col-lg--ordered">
-						<img src="text-block-image.jpg" alt="image description" />
+						<img class="desktop-image" src="text-block-image.jpg" alt="image description" />
+						<img class="mobile-image" src="text-block-image.jpg" alt="image description" />
 					</div>
 				</div>
 			</div>
@@ -1276,7 +1281,8 @@
 						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-8 image-holder col-xs--first">
-						<img src="text-block-image.jpg" alt="image description" />
+						<img class="desktop-image" src="text-block-image.jpg" alt="image description" />
+						<img class="mobile-image" src="text-block-image.jpg" alt="image description" />
 					</div>
 				</div>
 			</div>
@@ -1297,7 +1303,8 @@
 						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-4 image-holder col-xs--first col-lg--ordered">
-						<img src="text-block-image.jpg" alt="image description" />
+						<img class="desktop-image" src="text-block-image.jpg" alt="image description" />
+						<img class="mobile-image" src="text-block-image.jpg" alt="image description" />
 					</div>
 				</div>
 			</div>
@@ -1318,7 +1325,8 @@
 						<p class="text-legal text-size--11 color-steel-grey padding-toleft--section tabletp-padding-toleft--none">Legal text</p>
 					</div>
 					<div class="col-lg-4 image-holder col-xs--first">
-						<img src="text-block-image.jpg" alt="image description" />
+						<img class="desktop-image" src="text-block-image.jpg" alt="image description" />
+						<img class="mobile-image" src="text-block-image.jpg" alt="image description" />
 					</div>
 				</div>
 			</div>
